--- a/frontend_smart_tv_app/package.json
+++ b/frontend_smart_tv_app/package.json
@@ -8,13 +8,12 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "preview": "react-scripts start",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "browserslist": {
     "production": [
@@ -29,6 +28,17 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@eslint/js": "^9.18.0",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3"
   }
 }
